force-app/main/default/objects/Exam__c/fields/Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Date__c</fullName>
    <inlineHelpText>Scheduled date for the exam</inlineHelpText>
    <label>Exam Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>