force-app/main/default/objects/Exam__c/fields/Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Exam_Type__c</fullName>
    <label>Exam Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Midterm</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>