force-app/main/default/objects/Exam__c/fields/Max_Marks__c.field-meta.xml
<CustomField>
    <fullName>Max_Marks__c</fullName>
    <label>Max Marks</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>