force-app/main/default/objects/Exam__c/validationRules/Exam_Duration_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Exam_Duration_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  ISBLANK(Duration__c),
  Duration__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Duration__c</errorDisplayField>
    <errorMessage>Exam duration must be greater than 0.</errorMessage>
</ValidationRule>