force-app/main/default/objects/Exam__c/validationRules/Exam_EndDate_After_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Exam_EndDate_After_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Exam_Date__c)),
  NOT(ISBLANK(End_Date__c)),
  End_Date__c &lt; Exam_Date__c
)</errorConditionFormula>
    <errorDisplayField>Exam_Date__c</errorDisplayField>
    <errorMessage>Exam End Date cannot be before Start Date.</errorMessage>
</ValidationRule>