force-app/main/default/objects/Exam__c/validationRules/Exam_Requires_Course.validationRule-meta.xml
<ValidationRule>
    <fullName>Exam_Requires_Course</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Course__c)</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>Exam must be linked to a Course.</errorMessage>
</ValidationRule>